src/scss/sections/header.scss
.header {
    .wrapper {
        display: flex;
        height: 100%;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        min-height: 100vh;
        padding-bottom: 50px;
    }
}

.header__image {
    margin-bottom: 2em;
    width: 80%;
    max-width: 300px;
    @media screen and (min-width: 1100px) {
        width: 300px;
    }
}

.header__headline {
    font-weight: 600;
    font-size: 2.5em;
    opacity: 0;
    animation: fadeIn 1.5s forwards;
}

.header__line {
 margin: 1em 0;
 opacity: 0;
 animation: fadeIn 1.5s .3s forwards;
}

.header__subline {
    margin-top: .5em;
    font-weight: 600;
    font-size: 1.2em;
    text-align: center;
    opacity: 0;
    animation: fadeIn 1.5s .6s forwards;
}

.header__image {
    position: relative;
}

.header__image--1:hover {
    opacity: 0;
    transition: opacity .3s ease;
}

.header__image--2:hover {
    opacity: 1;
    transition: opacity .3s ease;
}

.header__image--1 {
    position: absolute;
}

.header__arrow {
    border: solid black;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 10px;
    position: absolute;
    bottom: 20px;
    right: 0;
    left: 0;
    margin: 0 auto;
    width: 10px;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    opacity: 0;
    animation: fadeIn2 1.5s 1s forwards, bounce-mobile 2s infinite ease-in-out;
    @media screen and (min-width: 400px) {
        animation: fadeIn2 1.5s 1s forwards, bounce 2s infinite ease-in-out;
        bottom: 50px;
    }
}

@keyframes bounce {
    0%   {bottom: 55px;}
    50%  {bottom: 70px;}
    100% {bottom: 55px}
  }

  @keyframes bounce-mobile {
    0%   {bottom: 20px;}
    50%  {bottom: 30px;}
    100% {bottom: 20px}
  }

  @keyframes fadeIn {
    from {
        transform: translateY(6px);
        opacity: 0;
    }
    to {
        transform: translateY(0px);
        opacity: 1;
    }
}

    @keyframes fadeIn2 {
        from {
            opacity: 0;
        }
        to {
            opacity: 1;
        }
  }

